# opsf

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  pypi-smoke.yml  release-checks.yml  tests.yml
benchmarks/: _common.py  analyze_loggamma_auto.py  bench_airy.py  bench_bessel.py  bench_gamma.py  bench_gamma_methods.py  bench_loggamma_methods.py  bench_pcf.py  bench_rgamma_methods.py  summarize_loggamma_auto.py
docs/: beta.md  certification.md  certification_audit.md  certified_scope_0_1_0.md  certified_scope_0_2_0.md  certified_scope_0_3_0.md  dawson.md  erfcinv.md  erfinv.md  error_function.md  formula_audit.md  gamma_ratio.md  gamma_stirling_exp.md  loggamma_certified_auto_decision.md  loggamma_ratio.md  pochhammer.md  post_release_verification.md  post_release_verification_0.3.0-alpha.5.md  post_release_verification_0.3.0.md  release-0.1.0-alpha.2.md  release-0.1.0-alpha.3.md  release-0.1.0.md  release-0.2.0-alpha.1.md  release-0.2.0-alpha.10.md  release-0.2.0-alpha.2.md  release-0.2.0-alpha.3.md  release-0.2.0-alpha.4.md  release-0.2.0-alpha.5.md  release-0.2.0-alpha.6.md  release-0.2.0-alpha.7.md  release-0.2.0-alpha.8.md  release-0.2.0-alpha.9.md  release-0.2.0.md  release-0.3.0-alpha.1.md  release-0.3.0-alpha.2.md  release-0.3.0-alpha.3.md  release-0.3.0-alpha.4.md  release-0.3.0-alpha.5.md  release-0.3.0.md  release-0.4.0.md  (+10 more)
docs/audit/: airy.md  bessel.md  erfinv_inverse.md  error_function.md  gamma.md  parabolic_cylinder.md
docs/benchmark_samples/: gamma_stirling_exp_sample.jsonl  loggamma_certified_auto_sample.jsonl  loggamma_certified_auto_sample_summary.json
examples/: airy_components.py  basic_usage.py  bessel_complex.py  certified_vs_high_precision.py  gamma_certified.py  mcp_payload.py  pcf_experimental.py
scripts/: check_release_version.py
src/certsf/: __init__.py  dispatcher.py  mcp_server.py  result.py
src/certsf/backends/: __init__.py  _common.py  arb_backend.py  mpmath_backend.py  scipy_backend.py
src/certsf/functions/: __init__.py  airy.py  bessel.py  error_function.py  gamma.py  parabolic_cylinder.py
src/certsf/methods/: __init__.py  beta_stirling.py  gamma_ratio_stirling.py  gamma_stirling.py  loggamma_auto.py  loggamma_ratio_stirling.py  rgamma_stirling.py  stirling.py  stirling_coefficients.py
tests/: test_airy.py  test_bessel.py  test_beta.py  test_beta_stirling_beta.py  test_branch_singularity.py  test_certification_audit.py  test_certification_contract.py  test_certified_identities.py  test_dawson.py  test_dispatcher.py  test_erfcinv.py  test_erfcx.py  test_erfi.py  test_erfinv.py  test_error_function.py  test_error_function_audit.py  test_external_reference_fixtures.py  test_gamma.py  test_gamma_ratio.py  test_gamma_ratio_stirling_ratio.py  test_gamma_stirling_exp.py  test_gamma_stirling_exp_plan.py  test_identity_residuals.py  test_loggamma_auto_decision.py  test_loggamma_ratio.py  test_loggamma_ratio_stirling_diff.py  test_mcp_schema.py  test_parabolic_cylinder_formula_audit.py  test_pbdv.py  test_pochhammer.py  test_public_contract.py  test_release_artifacts.py  test_release_claims.py  test_release_policy.py  test_release_scope.py  test_release_version_check.py  test_result.py  test_rgamma_stirling_recip.py  test_rgamma_stirling_recip_plan.py  test_stirling_loggamma.py  (+3 more)
tests/fixtures/external_reference/: airy_reference.json  bessel_reference.json  beta_reference.json  dawson_reference.json  erfcinv_reference.json  erfcx_reference.json  erfi_reference.json  erfinv_reference.json  error_function_reference.json  gamma_ratio_reference.json  gamma_reference.json  loggamma_ratio_reference.json  parabolic_cylinder_reference.json  pochhammer_reference.json
