[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "certsf"
version = "0.2.0a2"
description = "Alpha special-function wrappers with explicit certification diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yutian Lee" },
]
keywords = [
    "arb",
    "interval-arithmetic",
    "mpmath",
    "scientific-computing",
    "special-functions",
    "validated-numerics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mpmath>=1.3",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yutianlee/certsf"
Repository = "https://github.com/yutianlee/certsf"
Issues = "https://github.com/yutianlee/certsf/issues"

[project.optional-dependencies]
certified = [
    "python-flint>=0.6",
]
mcp = [
    "mcp>=1.0",
]
test = [
    "pytest>=8",
]
dev = [
    "build>=1.2",
    "mcp>=1.0",
    "mypy>=1.10",
    "pytest>=8",
    "python-flint>=0.6",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
files = ["src/certsf"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
